Insert date filter on vendas endpoint
